# data_tracker

./: .gitignore  README.md  TODOs.md  UNLICENSE  aaa.txt  data_tracker_main - Copy.py  data_tracker_main.py  data_tracker_python.sublime-project  data_tracker_python.sublime-workspace  nuitka-crash-report.xml  pyproject.toml
__old/: exp_92_1_41.rodhypix  exp_92_1_7.rodhypix  extrahiert_rodhypix.txt  lib_functions_file_monitoring - Copy (2).py  lib_functions_file_monitoring - Copy (3).py  lib_functions_file_monitoring - Copy (4).py  lib_functions_file_monitoring - Copy (5).py  lib_functions_file_monitoring - Copy (6).py  lib_functions_file_monitoring - Copy.py  lib_functions_file_monitoring.py  lib_shared_backup.py  microfluidics_calciumcarbonate_BG_31_2t_1_150.rodhypix  script_rodhypix.py  test_asyncio_1.py  test_resize.py  test_updating.py  updatiing_plot.py
config_files/: instructions_json - Copy.json  instructions_json.json  json_test__.json  settings.json
data_tracker_app/: build.lnk  test_.py
data_tracker_app_portable/: pyoxidizer.bzl  test.py
docs/source/: changelog.rst  conf.py  index.rst
src/data_tracker/: __init__.py
src/data_tracker/async_elements/: __init__.py  loops.py
src/data_tracker/conversions/: time_conversions.py
src/data_tracker/data_generators/: __init__.py  generators.py
src/data_tracker/data_readers/: __init__.py  base.py  reader_class_csv_reader.py  reader_class_hdf5_reader.py  reader_class_json_reader.py  reader_class_xlsx_reader.py  reader_class_yaml_reader.py
user_scripts/: reader_class_csv_reader.py
(+21 files in other folders)
